# XML::FeedPP Changes

2006/08/27 (0.15)
    * Atom 1.0 support got forward (thanks to Ole Kasper Olsen)

2006/05/07 (0.13)
    * buf fix: get_pubDate_rfc1123() for RDF/Atom
    * buf fix: image() for RDF, rdf:about attribute
    * image() for Atom supports additional content types: image/x-icon, etc.

2006/05/05 (0.12)
    * new method: clear_item()
    * image() method now supports XML::FeedPP::Atom as well.

2006/05/03 (0.11)
    * new method: remove_item() (thanks to JUNDU)
    * add_item() method now allows clone another item/entry instance.

2006/04/30 (0.10)
    * category() method fixed for more then one category. (thanks to vlajbert)
    * normalize() method normalizes pubDate element as well. (thanks to junichi)
    * load() method has additional arguments for XML::TreePP. (thanks to kisa)
    * source code passed perltidy.

2006/03/18 (0.08)
    * new methods: sort_item() uniq_item() limit_item() normalize()

2006/03/09 (0.07)
    * correct RSS/RDF/Atom file's format

2006/02/27 (0.05)
    * new methods: set() get()

2006/02/24 (0.03)
    * first release

# http://groups.yahoo.com/group/xml-feedpp/
# http://www.kawa.net/works/perl/feedpp/feedpp-e.html       (English)
# http://www.kawa.net/works/perl/feedpp/feedpp.html#changes (Japanese)